// Vitest Snapshot v1

exports[`SpinButton.vue > should render correctly 1`] = `
<span
  aria-disabled="false"
  aria-invalid="false"
  aria-label="Test"
  aria-valuemax="10"
  aria-valuemin="0"
  aria-valuenow="4"
  aria-valuetext="4"
  class=""
  role="spinbutton"
  tabindex="-1"
>
  04
</span>
`;

exports[`SpinButton.vue > should render disabled 1`] = `
<span
  aria-disabled="true"
  aria-invalid="false"
  aria-label="Test"
  aria-valuemax="10"
  aria-valuemin="0"
  aria-valuenow="0"
  aria-valuetext="dd"
  class="disabled"
  role="spinbutton"
  tabindex="-1"
>
  dd
</span>
`;

exports[`SpinButton.vue > should render placeholder when there is no value 1`] = `
<span
  aria-disabled="false"
  aria-invalid="false"
  aria-label="Test"
  aria-valuemax="10"
  aria-valuemin="0"
  aria-valuenow="0"
  aria-valuetext="dd"
  class=""
  role="spinbutton"
  tabindex="-1"
>
  dd
</span>
`;
